feat: enforce authoritative auth permission context